# final-project-zelshahawy

./: CHANGELOG.md  LICENSE  README.md  contact.txt  progress.md  proposal.md  public-release.md  pyleft.cabal  pyleft.json  pyleft.toml  report.md
app/: Main.hs
examples/: bare.py  multiple.py  mutable.py  shadow_builtin.py  test_one.py  unused_local.py  wildcard.py
scripts/: dump_ast_json.py
src/Pyleft/CLI/: Options.hs
src/Pyleft/Driver/: Discover.hs  Run.hs
src/Pyleft/Frontend/: Parse.hs
src/Pyleft/Lint/: Config.hs  Registry.hs  Scope.hs  Types.hs
src/Pyleft/Report/: Format.hs
src/Pyleft/Rules/: BareExcept.hs  MakeDiag.hs  MutableDefaults.hs  ShadowBuiltins.hs  UnusedImports.hs  UnusedLocals.hs  WildcardImport.hs
test/: Main.hs
