cabal-version:      3.0
name:               pyleft
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ziad Elshahawy
maintainer:         ziadelshahawygit@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: scripts/dump_ast_json.py

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:
      Pyleft.Driver.Run
      Pyleft.Lint.Types
  other-modules:
      Pyleft.Frontend.Parse
      Pyleft.Report.Format
      Pyleft.Rules.MakeDiag
      Pyleft.Rules.BareExcept
      Pyleft.Rules.MutableDefaults
      Pyleft.Rules.WildcardImport
      Pyleft.Rules.UnusedImports
      Pyleft.Rules.UnusedLocals
      Pyleft.Rules.ShadowBuiltins
      Pyleft.Lint.Scope
      Pyleft.Lint.Registry
      Pyleft.Driver.Discover
      Pyleft.CLI.Options
      Pyleft.Lint.Config
  build-depends:
      base ^>=4.18.3.0
    , aeson
    , bytestring
    , text
    , filepath
    , process
    , directory
    , vector
    , containers
    , optparse-applicative
    , toml-reader
  default-language: GHC2021

executable pyleft
  import:           warnings
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
      base ^>=4.18.3.0
    , pyleft
  default-language: GHC2021

test-suite pyleft-test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
      base ^>=4.18.3.0
    , pyleft
  default-language: GHC2021
